# hasp_adapter

./: CMakeLists.txt  README.md  hasp_adapter.cpp  hasp_demo.c  hasp_update.c  main.cpp
include/: hasp_adapter.h  hasp_api.h  hasp_vcode.h
