cmake_minimum_required(VERSION 3.10)
project(hasp_adapter)
set(project_name "hasp_adapter_${CMAKE_SYSTEM_PROCESSOR}")
set(CMAKE_CXX_FLAGS)
#add_library(${project_name} SHARED   hasp_adapter.cpp)
add_executable(${project_name} main.cpp hasp_adapter.cpp)
if (CMAKE_SYSTEM_NAME MATCHES "Windows")
    target_link_libraries(${project_name}
            ${PROJECT_SOURCE_DIR}/lib/Windows/x64/libhasp_windows_x64_34033.lib
           )
else()
    if( ${CMAKE_SYSTEM_PROCESSOR} MATCHES  "aarch64")
        target_link_libraries(${project_name} ${PROJECT_SOURCE_DIR}/lib/Linux/${CMAKE_SYSTEM_PROCESSOR}/libhasp_linux_arm64_34033.a pthread)
    else()
        target_link_libraries(${project_name} ${PROJECT_SOURCE_DIR}/lib/Linux/${CMAKE_SYSTEM_PROCESSOR}/libhasp_linux_x86_64_34033.a pthread)
    endif()
endif ()
